--- a/about.html
+++ b/about.html
@@ -42,8 +42,8 @@
     <main>
         <nav class="whereAmIContainer">
             <ul>
-                <li><a href="index.html">Hjem - </a></li>
-                <li><a href="about.html">Om oss</a></li>
+                <li><a href="index.html">Hjem</a></li>
+                <li><a href="about.html" class="whereAmINow">> Om oss</a></li>
             </ul>
         </nav>
         <div class="backgroundAbout"></div>
