--- a/menu.html
+++ b/menu.html
@@ -40,6 +40,12 @@
 
 
     <main>
+        <nav class="whereAmIContainer">
+            <ul>
+                <li><a href="index.html">Hjem</a></li>
+                <li><a href="menu.html" class="whereAmINow">> Meny</a></li>
+            </ul>
+        </nav>
         <div class="backgroundMenu"></div>
         <div class="menuContainer">
             <h1>Sommermeny</h1>
