--- a/rent.html
+++ b/rent.html
@@ -40,6 +40,12 @@
 
 
     <main>
+        <nav class="whereAmIContainer">
+            <ul>
+                <li><a href="index.html">Hjem</a></li>
+                <li><a href="rent.html" class="whereAmINow">> Leie av lokalet</a></li>
+            </ul>
+        </nav>
         <div class="backgroundRent"></div>
         <div class="rentContainer">
             <h1>Leie av lokalet</h1>
