--- a/catering.html
+++ b/catering.html
@@ -39,6 +39,12 @@
 
 
     <main>
+        <nav class="whereAmIContainer">
+            <ul>
+                <li><a href="index.html">Hjem</a></li>
+                <li><a href="catering.html" class="whereAmINow">> Catering</a></li>
+            </ul>
+        </nav>
         <h1>Velkommen til Villa Mat og Mer</h1>
         <p>hyggelig å ha deg her</p>
     </main>
