--- a/shop.html
+++ b/shop.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/shop.css">
     <link rel="stylesheet" href="css/mediaqueries.css">
     <script src="https://kit.fontawesome.com/3ca04481c9.js" crossorigin="anonymous"></script>
 </head>
@@ -45,8 +46,17 @@
                 <li><a href="shop.html" class="whereAmINow">> Landhandel</a></li>
             </ul>
         </nav>
-        <h1>Velkommen til Villa Mat og Mer</h1>
-        <p>hyggelig å ha deg her</p>
+        <div class="backgroundShop"></div>
+        <div class="shopContainer">
+            <h1>Landhandel</h1>
+            <p>Villa Mat og Mer vil være den gamle gode landhandelen i ny prakt. Det første du ser når du stikker innom er en stor disk som bugner av ferske bakevarer, kaker og konfekt.</p>
+            <p>Vi vil kunne tilby deg å smake på og kjøpe med deg norskprodusert ost fra ildsjeler rundt om i Norge, spekemat i ulike varianter syltetøy, kjeks, oljer og andre godsaker.</p>
+            <p>Interiør</p>
+            <h2>Gavepakker</h2>
+            <p>Hvem</p>
+        </div>
+        
+    
     </main>
 
 
