--- a/about.html
+++ b/about.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/about.css">
     <link rel="stylesheet" href="css/mediaqueries.css">
@@ -25,14 +27,12 @@
                 <li><a href="shop.html">Landhandel</a></li>
                 <li><a href="catering.html">Catering</a></li>
                 <li><a href="afternoontea.html">Afternoon tea</a></li>
-                <li><a href="rent.html">Leie</a></li>
-                <li><a href="about.html">Om oss</a></li>
-                <li><a href="contact.html">Kontakt</a></li>
+                <li><a href="about.html" class="whereAmINow">Om oss</a></li>
             </ul>
         </nav>
         <div class="iconContainer">
-            <a href="https://www.facebook.com/Villa-Mat-og-Mer-202483923145207"><i class="fab fa-facebook-f"></i></a>
-            <a href="https://www.instagram.com/villamatogmer/"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.facebook.com/Villa-Mat-og-Mer-202483923145207" target="_blank"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://www.instagram.com/villamatogmer/" target="_blank"><i class="fab fa-instagram"></i></a>
             <i class="far fa-envelope"></i>
             <i class="fas fa-phone-alt"></i>
         </div>
@@ -57,13 +57,15 @@
             <p>Villa Mat og Mer ligger i en gammel villa klemt inn mellom nye mursteinsbygninger. Vi har lyst at det skal være litt Villa Villa Kulla – et sted med mat og opplevelser som du kan dele med familie, dine venner eller kollegaer.</p>
             <p>Vi ønsker at våre gjester skal glede seg over ett treffsted der matglede, kvalitet, service og en trivelig atmosfære står i sentrum. </p>
             <p>Vi vil leke med den norske maten og utvikle og videreformidle matglede. Villa Mat og Mer er vårt spiseri og vår landhandel med leken atmosfære og frisk, folkelig mat.</p>
-        </div>
-        
+            <h2>Kontakt oss</h2>
+            <p>Telefon: 69893481</p>
+            <p>Epost: post@villamatogmer.no</p>
+            <p>Daglig leder: Anne-Marit R. Vammeli</p>
+        </div> 
     </main>
 
 
     <footer>
-
         <div class="footerContainer">
             <div class="footerContactUs">
                 <a href="contact.html"><h4><i class="fas fa-heart"></i>Kontakt oss</h4></a>
