--- a/catering.html
+++ b/catering.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/catering.css">
     <link rel="stylesheet" href="css/mediaqueries.css">
@@ -23,16 +25,14 @@
             <ul class="nav-ul" id="nav-ul">
                 <li><a href="menu.html">Meny</a></li>
                 <li><a href="shop.html">Landhandel</a></li>
-                <li><a href="catering.html">Catering</a></li>
+                <li><a href="catering.html" class="whereAmINow">Catering</a></li>
                 <li><a href="afternoontea.html">Afternoon tea</a></li>
-                <li><a href="rent.html">Leie</a></li>
                 <li><a href="about.html">Om oss</a></li>
-                <li><a href="contact.html">Kontakt</a></li>
             </ul>
         </nav>
         <div class="iconContainer">
-            <a href="https://www.facebook.com/Villa-Mat-og-Mer-202483923145207"><i class="fab fa-facebook-f"></i></a>
-            <a href="https://www.instagram.com/villamatogmer/"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.facebook.com/Villa-Mat-og-Mer-202483923145207" target="_blank"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://www.instagram.com/villamatogmer/" target="_blank"><i class="fab fa-instagram"></i></a>
             <i class="far fa-envelope"></i>
             <i class="fas fa-phone-alt"></i>
         </div>
