--- a/shop.html
+++ b/shop.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Villa Mat og Mer | Cafe i Mysen</title>
+    <title>Villa Mat og Mer | Landhandel</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/shop.css">
     <link rel="stylesheet" href="css/mediaqueries.css">
@@ -22,17 +24,15 @@
             </button>
             <ul class="nav-ul" id="nav-ul">
                 <li><a href="menu.html">Meny</a></li>
-                <li><a href="shop.html">Landhandel</a></li>
+                <li><a href="shop.html" class="whereAmINow">Landhandel</a></li>
                 <li><a href="catering.html">Catering</a></li>
                 <li><a href="afternoontea.html">Afternoon tea</a></li>
-                <li><a href="rent.html">Leie</a></li>
                 <li><a href="about.html">Om oss</a></li>
-                <li><a href="contact.html">Kontakt</a></li>
             </ul>
         </nav>
         <div class="iconContainer">
-            <a href="https://www.facebook.com/Villa-Mat-og-Mer-202483923145207"><i class="fab fa-facebook-f"></i></a>
-            <a href="https://www.instagram.com/villamatogmer/"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.facebook.com/Villa-Mat-og-Mer-202483923145207" target="_blank"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://www.instagram.com/villamatogmer/" target="_blank"><i class="fab fa-instagram"></i></a>
             <i class="far fa-envelope"></i>
             <i class="fas fa-phone-alt"></i>
         </div>
@@ -51,7 +51,9 @@
             <h1>Landhandel</h1>
             <p>Villa Mat og Mer vil være den gamle gode landhandelen i ny prakt. Det første du ser når du stikker innom er en stor disk som bugner av ferske bakevarer, kaker og konfekt.</p>
             <p>Vi vil kunne tilby deg å smake på og kjøpe med deg norskprodusert ost fra ildsjeler rundt om i Norge, spekemat i ulike varianter syltetøy, kjeks, oljer og andre godsaker.</p>
-            <p>Interiør</p>
+            <h2>Matvarer</h2>
+            <p>Vi har mat fra blant annet:</p>
+            <h2>Interiør</h2>
             <h2>Gavepakker</h2>
             <p>Hvem</p>
         </div>
