--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
                 <li><a href="shop.html">Landhandel</a></li>
                 <li><a href="catering.html">Catering</a></li>
                 <li><a href="afternoontea.html">Afternoon tea</a></li>
-                <li><a href="about.html" class="whereAmINow">Om oss</a></li>
+                <li><a href="about.html" class="where-am-i-now">Om oss</a></li>
             </ul>
         </nav>
         <div class="iconContainer">
@@ -37,51 +37,47 @@
             <i class="fas fa-phone-alt"></i>
         </div>
     </header>
-
-
     <main>
-        <nav class="whereAmIContainer">
+        <nav class="where-am-i-container">
             <ul>
                 <li><a href="index.html">Hjem</a></li>
-                <li><a href="about.html" class="whereAmINow">> Om oss</a></li>
+                <li><a href="about.html" class="where-am-i-now">> Om oss</a></li>
             </ul>
         </nav>
-        <div class="backgroundAbout"></div>
-        <div class="aboutContainer">
+        <div class="background-about"></div>
+        <div class="about-container">
             <h1>Villa Mat og Mer spiseri og landhandel</h1>
-            <p>På Villa Mat og Mer får du servert fersk mat som vi har stått opp tidlig for å forberede. Fra vårt spiseri ordnes det salater, blingser, foccacia og mange varianter av søte godsaker som lapper, boller og kaker. Ønsker du varm mat har vi supper. </p>
-            <p>Alt dette kan du nyte i våre trivelige lokaler eller kanskje du vil ta det med deg for å hygge deg litt ekstra på jobb, på tur eller hjemme i sofaen.</p>
-            <p>Villa Mat og Mer vil være den gamle gode landhandelen i ny prakt. Det første du ser når du stikker innom er en stor disk som bugner av ferske bakevarer, kaker og konfekt.</p>
-            <p>Vi vil kunne tilby deg å smake på og kjøpe med deg norskprodusert ost fra ildsjeler rundt om i Norge, spekemat i ulike varianter syltetøy, kjeks, oljer og andre godsaker.</p>
+                <p>På Villa Mat og Mer får du servert fersk mat som vi har stått opp tidlig for å forberede. Fra vårt spiseri ordnes det salater, blingser, foccacia og mange varianter av søte godsaker som lapper, boller og kaker. Ønsker du varm mat har vi supper. </p>
+                <p>Alt dette kan du nyte i våre trivelige lokaler eller kanskje du vil ta det med deg for å hygge deg litt ekstra på jobb, på tur eller hjemme i sofaen.</p>
+                <p>Villa Mat og Mer vil være den gamle gode landhandelen i ny prakt. Det første du ser når du stikker innom er en stor disk som bugner av ferske bakevarer, kaker og konfekt.</p>
+                <p>Vi vil kunne tilby deg å smake på og kjøpe med deg norskprodusert ost fra ildsjeler rundt om i Norge, spekemat i ulike varianter syltetøy, kjeks, oljer og andre godsaker.</p>
             <h2>Vår filosofi</h2>
-            <p>Villa Mat og Mer ligger i en gammel villa klemt inn mellom nye mursteinsbygninger. Vi har lyst at det skal være litt Villa Villa Kulla – et sted med mat og opplevelser som du kan dele med familie, dine venner eller kollegaer.</p>
-            <p>Vi ønsker at våre gjester skal glede seg over ett treffsted der matglede, kvalitet, service og en trivelig atmosfære står i sentrum. </p>
-            <p>Vi vil leke med den norske maten og utvikle og videreformidle matglede. Villa Mat og Mer er vårt spiseri og vår landhandel med leken atmosfære og frisk, folkelig mat.</p>
+                <p>Villa Mat og Mer ligger i en gammel villa klemt inn mellom nye mursteinsbygninger. Vi har lyst at det skal være litt Villa Villa Kulla – et sted med mat og opplevelser som du kan dele med familie, dine venner eller kollegaer.</p>
+                <p>Vi ønsker at våre gjester skal glede seg over ett treffsted der matglede, kvalitet, service og en trivelig atmosfære står i sentrum. </p>
+                <p>Vi vil leke med den norske maten og utvikle og videreformidle matglede. Villa Mat og Mer er vårt spiseri og vår landhandel med leken atmosfære og frisk, folkelig mat.</p>
             <h2>Kontakt oss</h2>
-            <p>Telefon: 69893481</p>
-            <p>Epost: post@villamatogmer.no</p>
-            <p>Daglig leder: Anne-Marit R. Vammeli</p>
+                <p>Telefon: 69893481</p>
+                <p>Epost: post@villamatogmer.no</p>
+                <p>Daglig leder: Anne-Marit R. Vammeli</p>
         </div> 
     </main>
-
-
     <footer>
-        <div class="footerContainer">
-            <div class="footerContactUs">
+        <div class="footer-container">
+            <div>
                 <a href="contact.html"><h4><i class="fas fa-heart"></i>Kontakt oss</h4></a>
                 <p>Telefon: 69893481</p>
                 <p>Epost: post@villamatogmer.no</p>
                 <p>Daglig leder: Anne-Marit R. Vammeli</p>
             </div>
-            <div class="footerVisitUs">
+            <div>
                 <a href="about.html"><h4><i class="fas fa-heart"></i>Besøk oss</h4></a>
                 <p>Villa Mat og Mer</p>
                 <p>David Blidsgate 6</p>
                 <p>1850 Mysen</p>
             </div>
-            <div class="footerOpeningHours">
+            <div>
                 <h4><i class="fas fa-heart"></i>Åpningstider</h4>
-                <table class="footerTable">
+                <table class="footer-table">
                     <tr>
                         <td>Mandag til fredag</td>
                         <td>10:00 - 17:00</td>
@@ -98,9 +94,7 @@
                 <p>Kjøkkenet stenger 30 minutter før døren lukkes. Endringer i åpningstider i høytider og helligdager - sjekk vår Facebookside.</p>
             </div>
         </div>
-
-
-    </footer>
+    </footer> 
     
     <script src="js/hamburgermenu.js"></script>
 
