--- a/menu.html
+++ b/menu.html
@@ -23,7 +23,7 @@
                 <div class="hamburger-stripes"></div>
             </button>
             <ul class="nav-ul" id="nav-ul">
-                <li><a href="menu.html" class="whereAmINow">Meny</a></li>
+                <li><a href="menu.html" class="where-am-i-now">Meny</a></li>
                 <li><a href="shop.html">Landhandel</a></li>
                 <li><a href="catering.html">Catering</a></li>
                 <li><a href="afternoontea.html">Afternoon tea</a></li>
@@ -40,14 +40,14 @@
 
 
     <main>
-        <nav class="whereAmIContainer">
+        <nav class="where-am-i-container">
             <ul>
                 <li><a href="index.html">Hjem</a></li>
-                <li><a href="menu.html" class="whereAmINow">> Meny</a></li>
+                <li><a href="menu.html" class="where-am-i-now">> Meny</a></li>
             </ul>
         </nav>
-        <div class="backgroundMenu"></div>
-        <div class="menuContainer">
+        <div class="background-menu"></div>
+        <div class="menu-container">
             <h1>Meny</h1>
             <p>På Villa Mat og Mer får du servert fersk mat som vi har stått opp tidlig for å forberede. </p>
             <p>Fra vårt spiseri ordnes det salater, blingser, foccacia og mange varianter av søte godsaker som lapper, boller og kaker. </p>
@@ -76,23 +76,22 @@
 
 
     <footer>
-
-        <div class="footerContainer">
-            <div class="footerContactUs">
+        <div class="footer-container">
+            <div>
                 <a href="contact.html"><h4><i class="fas fa-heart"></i>Kontakt oss</h4></a>
                 <p>Telefon: 69893481</p>
                 <p>Epost: post@villamatogmer.no</p>
                 <p>Daglig leder: Anne-Marit R. Vammeli</p>
             </div>
-            <div class="footerVisitUs">
+            <div>
                 <a href="about.html"><h4><i class="fas fa-heart"></i>Besøk oss</h4></a>
                 <p>Villa Mat og Mer</p>
                 <p>David Blidsgate 6</p>
                 <p>1850 Mysen</p>
             </div>
-            <div class="footerOpeningHours">
+            <div>
                 <h4><i class="fas fa-heart"></i>Åpningstider</h4>
-                <table class="footerTable">
+                <table class="footer-table">
                     <tr>
                         <td>Mandag til fredag</td>
                         <td>10:00 - 17:00</td>
@@ -109,9 +108,7 @@
                 <p>Kjøkkenet stenger 30 minutter før døren lukkes. Endringer i åpningstider i høytider og helligdager - sjekk vår Facebookside.</p>
             </div>
         </div>
-
-
-    </footer>
+    </footer> 
     
     <script src="js/hamburgermenu.js"></script>
 
