--- a/shop.html
+++ b/shop.html
@@ -24,7 +24,7 @@
             </button>
             <ul class="nav-ul" id="nav-ul">
                 <li><a href="menu.html">Meny</a></li>
-                <li><a href="shop.html" class="whereAmINow">Landhandel</a></li>
+                <li><a href="shop.html" class="where-am-i-now">Landhandel</a></li>
                 <li><a href="catering.html">Catering</a></li>
                 <li><a href="afternoontea.html">Afternoon tea</a></li>
                 <li><a href="about.html">Om oss</a></li>
@@ -40,14 +40,14 @@
 
 
     <main>
-        <nav class="whereAmIContainer">
+        <nav class="where-am-i-container">
             <ul>
                 <li><a href="index.html">Hjem</a></li>
-                <li><a href="shop.html" class="whereAmINow">> Landhandel</a></li>
+                <li><a href="shop.html" class="where-am-i-now">> Landhandel</a></li>
             </ul>
         </nav>
-        <div class="backgroundShop"></div>
-        <div class="shopContainer">
+        <div class="background-shop"></div>
+        <div class="shop-container">
             <h1>Landhandel</h1>
             <p>Villa Mat og Mer vil være den gamle gode landhandelen i ny prakt. Det første du ser når du stikker innom er en stor disk som bugner av ferske bakevarer, kaker og konfekt.</p>
             <p>Vi vil kunne tilby deg å smake på og kjøpe med deg norskprodusert ost fra ildsjeler rundt om i Norge, spekemat i ulike varianter syltetøy, kjeks, oljer og andre godsaker.</p>
@@ -63,23 +63,22 @@
 
 
     <footer>
-
-        <div class="footerContainer">
-            <div class="footerContactUs">
+        <div class="footer-container">
+            <div>
                 <a href="contact.html"><h4><i class="fas fa-heart"></i>Kontakt oss</h4></a>
                 <p>Telefon: 69893481</p>
                 <p>Epost: post@villamatogmer.no</p>
                 <p>Daglig leder: Anne-Marit R. Vammeli</p>
             </div>
-            <div class="footerVisitUs">
+            <div>
                 <a href="about.html"><h4><i class="fas fa-heart"></i>Besøk oss</h4></a>
                 <p>Villa Mat og Mer</p>
                 <p>David Blidsgate 6</p>
                 <p>1850 Mysen</p>
             </div>
-            <div class="footerOpeningHours">
+            <div>
                 <h4><i class="fas fa-heart"></i>Åpningstider</h4>
-                <table class="footerTable">
+                <table class="footer-table">
                     <tr>
                         <td>Mandag til fredag</td>
                         <td>10:00 - 17:00</td>
@@ -96,9 +95,7 @@
                 <p>Kjøkkenet stenger 30 minutter før døren lukkes. Endringer i åpningstider i høytider og helligdager - sjekk vår Facebookside.</p>
             </div>
         </div>
-
-
-    </footer>
+    </footer> 
     
     <script src="js/hamburgermenu.js"></script>
 
