--- a/catering-tapas.html
+++ b/catering-tapas.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Villa Mat og Mer | Cafe i Mysen</title>
+    <title>Villa Mat og Mer | Landhandel</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/catering.css">
     <link rel="stylesheet" href="css/mediaqueries.css">
@@ -44,64 +43,54 @@
         <nav class="where-am-i-container">
             <ul>
                 <li><a href="index.html">Hjem</a></li>
-                <li><a href="catering.html" class="where-am-i-now">> Catering</a></li>
+                <li><a href="catering.html">> Catering</a></li>
+                <li><a href="catering-blings.html" class="where-am-i-now">> Tapas</a></li>
             </ul>
         </nav>
-        <div class="catering-intro-text">
-            <h1>Catering</h1>
-            <p>Vi vil gjerne lage mat til selskap, jubileum, firmasamling, møter eller vennetreff.</p>
-            <p>For at alt skal være så ferskt og godt som mulig, lager vi til maten i ”siste liten”. Vi bruker alltid friske råvarer og har fokus på at det skal være ferskt, friskt, delikat og med god smak.</p>
-            <p>Maten blir servert på fine fat og skåler slik at det blir fest når en setter seg til bordet.</p>
-        </div>
-        
-        <div class="catering-container">
-          <a href="catering-tapas.html" class="catering-container-content">
-            <img src="images/foodtapas.jpg" alt="">
-            <div>
-              <h2 class="catering-button">Tapas eller fingermat</h2>
-            </div>
-          </a>
-          <a href="catering-lystbord.html" class="catering-container-content">
-            <img src="images/foodlystbord.jpg" alt="">
-            <div>
-              <h2 class="catering-button">Lystbord (Koltbord)</h2>
-            </div>
-          </a>
-          <a href="catering-blings.html" class="catering-container-content">
-            <img src="images/foodblings.jpg" alt="">
-            <div>
-              <h2 class="catering-button">Miniblings</h2>
-            </div>
-          </a>
-          <a href="catering-varm.html" class="catering-container-content">
-            <img src="images/foodvarm.jpg" alt="">
-            <div>
-              <h2 class="catering-button">Varme retter</h2>
-            </div>
-          </a>
-          <a href="catering-christmas.html" class="catering-container-content">
-            <img src="images/foodchristmas.jpg" alt="">
-            <div>
-              <h2 class="catering-button">Førjulsmåltider</h2>
-            </div>
-          </a>
-          <a href="catering-fruit.html" class="catering-container-content">
-            <img src="images/foodfruit.jpg" alt="">
-            <div>
-              <h2 class="catering-button">Salat, frukt, ost & spekemat</h2>
-            </div>
-          </a>
-          <a href="catering-cake.html" class="catering-container-content">
-            <img src="images/foodcake.jpg" alt="">
-            <div>
-              <h2 class="catering-button">Hjemmelagde kaker</h2>
-            </div>
-          </a>
 
+        <div class="image-carousel">
 
         </div>
 
-
+        <div class="catering-spesific">
+            <div class="catering-spesific-information">
+                <h1>Figermat, små munnfuller eller tapas om du vil</h1>
+                <p>Små lekre retter som nytes og gjør en passelig mett.</p>
+                <p>Alt lages på Villa i flere operasjoner for å få ett smakfullt resultat.</p>
+                <p>Minimum 15 personer.</p>
+                <p>Vi anbefaler 8-10 retter til et måltid.</p>
+                <p>Pris per rett per person, du setter sammen hva du ønsker.</p>
+                <p>Matintoleranse? Gi oss beskjed så finner vi en løsning.</p>
+            </div>
+            <div class="catering-spesific-menu">
+                <h2>Meny</h2>
+                <ul>
+                    <li><i class="fas fa-heart"></i>Sjampinjonger med fyll av westfaler, hvitløk og persille kr 30,-</li>
+                    <li><i class="fas fa-heart"></i>Egg med smakfullt ostefyll kr 25,-</li>
+                    <li><i class="fas fa-heart"></i>Albondigas - kjøttboller med hvitløk og ingefær. Salsa kr 48,-</li>
+                    <li><i class="fas fa-heart"></i>Bruschetta med rucculakrem kr 26,-</li>
+                    <li><i class="fas fa-heart"></i>Kyllingruller med chili og fetaost kr 59,-</li>
+                    <li><i class="fas fa-heart"></i>Lefse med røkelaks, snøfrisk og dill kr 32,-</li>
+                    <li><i class="fas fa-heart"></i>Bakte spekeskinker kr 25,-</li>
+                    <li><i class="fas fa-heart"></i>Parmesanchips kr 35,-</li>
+                    <li><i class="fas fa-heart"></i>Foccacia kr 25,-</li>
+                    <li><i class="fas fa-heart"></i>Lune tortillaruller med tunfisk kr 39,-</li>
+                    <li><i class="fas fa-heart"></i>Saltbakte poteter med aioli kr 35,-</li>
+                    <li><i class="fas fa-heart"></i>Kylling i karri på godt brød kr 35,-</li>
+                    <li><i class="fas fa-heart"></i>3 Chilimarinerte scampi på spyd kr 59,-</li>
+                    <li><i class="fas fa-heart"></i>Frisk tunfisksalat på godt brød kr 35,-</li>
+                    <li><i class="fas fa-heart"></i>Tortillaruller med brie, spekeskinke og ruccola kr 49,-</li>
+                    <li><i class="fas fa-heart"></i>Spekemat på spyd kr 45,-</li>
+                    <li><i class="fas fa-heart"></i>Ostesnaks fra Landhandlen kr 49,-</li>
+                    <li><i class="fas fa-heart"></i>Aioli kr 10,-</li>
+                </ul>
+            </div>
+            <div class="catering-spesific-contact">
+                <h2>Kontakt oss for bestilling</h2>
+                <p>Telefon: 69893481</p>
+                <p>Epost: post@villamatogmer.no</p>
+            </div>
+        </div>   
     </main>
 
 
