--- a/catering-lystbord.html
+++ b/catering-lystbord.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Villa Mat og Mer | Cafe i Mysen</title>
+    <title>Villa Mat og Mer | Landhandel</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/catering.css">
     <link rel="stylesheet" href="css/mediaqueries.css">
@@ -44,64 +43,69 @@
         <nav class="where-am-i-container">
             <ul>
                 <li><a href="index.html">Hjem</a></li>
-                <li><a href="catering.html" class="where-am-i-now">> Catering</a></li>
+                <li><a href="catering.html">> Catering</a></li>
+                <li><a href="catering-blings.html" class="where-am-i-now">> Lystbord</a></li>
             </ul>
         </nav>
-        <div class="catering-intro-text">
-            <h1>Catering</h1>
-            <p>Vi vil gjerne lage mat til selskap, jubileum, firmasamling, møter eller vennetreff.</p>
-            <p>For at alt skal være så ferskt og godt som mulig, lager vi til maten i ”siste liten”. Vi bruker alltid friske råvarer og har fokus på at det skal være ferskt, friskt, delikat og med god smak.</p>
-            <p>Maten blir servert på fine fat og skåler slik at det blir fest når en setter seg til bordet.</p>
-        </div>
-        
-        <div class="catering-container">
-          <a href="catering-tapas.html" class="catering-container-content">
-            <img src="images/foodtapas.jpg" alt="">
-            <div>
-              <h2 class="catering-button">Tapas eller fingermat</h2>
-            </div>
-          </a>
-          <a href="catering-lystbord.html" class="catering-container-content">
-            <img src="images/foodlystbord.jpg" alt="">
-            <div>
-              <h2 class="catering-button">Lystbord (Koltbord)</h2>
-            </div>
-          </a>
-          <a href="catering-blings.html" class="catering-container-content">
-            <img src="images/foodblings.jpg" alt="">
-            <div>
-              <h2 class="catering-button">Miniblings</h2>
-            </div>
-          </a>
-          <a href="catering-varm.html" class="catering-container-content">
-            <img src="images/foodvarm.jpg" alt="">
-            <div>
-              <h2 class="catering-button">Varme retter</h2>
-            </div>
-          </a>
-          <a href="catering-christmas.html" class="catering-container-content">
-            <img src="images/foodchristmas.jpg" alt="">
-            <div>
-              <h2 class="catering-button">Førjulsmåltider</h2>
-            </div>
-          </a>
-          <a href="catering-fruit.html" class="catering-container-content">
-            <img src="images/foodfruit.jpg" alt="">
-            <div>
-              <h2 class="catering-button">Salat, frukt, ost & spekemat</h2>
-            </div>
-          </a>
-          <a href="catering-cake.html" class="catering-container-content">
-            <img src="images/foodcake.jpg" alt="">
-            <div>
-              <h2 class="catering-button">Hjemmelagde kaker</h2>
-            </div>
-          </a>
 
+        <div class="image-carousel">
 
         </div>
 
-
+        <div class="catering-spesific">
+            <div class="catering-spesific-information">
+                <h1>Lystbord - Koltbord</h1>
+                <p>Det kalles av de fleste koldtbord, men vi velger oss ordet lystbord – for du spiser det du har lyst på!</p>
+                <p>Pris per person kr 315,-</p>
+                <p>Minimum 10 personer.</p>
+                <p>Matintoleranse? Gi oss beskjed så finner vi en løsning.</p>
+            </div>
+            <div class="catering-spesific-menu">
+                <h2>Tradisjonelt Lystbord</h2>
+                <ul>
+                    <li><i class="fas fa-heart"></i>Karbonader med stekt løk</li>
+                    <li><i class="fas fa-heart"></i>Eggerøre og westfalerskinke</li>
+                    <li><i class="fas fa-heart"></i>Ovnsbakt laks</li>
+                    <li><i class="fas fa-heart"></i>Cabaret med reker og egg</li>
+                    <li><i class="fas fa-heart"></i>Marinert kyllingbryst</li>
+                    <li><i class="fas fa-heart"></i>Waldorfsalat</li>
+                    <li><i class="fas fa-heart"></i>Grønn salat</li>
+                    <li><i class="fas fa-heart"></i>Villas potetsalat</li>
+                </ul>
+            </div>
+            <div class="catering-spesific-menu">
+                <h2>Kombinasjonslystbord</h2>
+                <ul>
+                    <li><i class="fas fa-heart"></i>Salat med westfalerskinke, pasta og avocado</li>
+                    <li><i class="fas fa-heart"></i>Ovnsbakt laks</li>
+                    <li><i class="fas fa-heart"></i>Brie med honningglaserte nøtter</li>
+                    <li><i class="fas fa-heart"></i>Smørbrødterte med reker og avokado dekorert med rogn og kruspersille</li>
+                    <li><i class="fas fa-heart"></i>Spekematfat</li>
+                    <li><i class="fas fa-heart"></i>Spagettigryte med kylling og scampi</li>
+                    <li><i class="fas fa-heart"></i>Villas lasagne</li>
+                    <li><i class="fas fa-heart"></i>Grønn salat</li>
+                </ul>
+            </div>
+            <div class="catering-spesific-menu">
+                <h2>Lystbord med nye smaker</h2>
+                <ul>
+                    <li><i class="fas fa-heart"></i>Ovnsbakt laks</li>
+                    <li><i class="fas fa-heart"></i>Smørbrødterte med reker og avokado dekorert med rogn og kruspersille</li>
+                    <li><i class="fas fa-heart"></i>Spagettigryte med kylling og scampi</li>
+                    <li><i class="fas fa-heart"></i>Brie med honningglaserte nøtter</li>
+                    <li><i class="fas fa-heart"></i>Couscoussalat med ruccola, spekeskinke, fetaost og avokado</li>
+                    <li><i class="fas fa-heart"></i>Saltbakte poteter med aioli</li>
+                    <li><i class="fas fa-heart"></i>Chevresalat med bringebær og valnøtter</li>
+                    <li><i class="fas fa-heart"></i>Syndig god sennepsmarinert kylling</li>
+                    <li><i class="fas fa-heart"></i>Vi kan tilby godt brød om du ønsker det</li>
+                </ul>
+            </div>
+            <div class="catering-spesific-contact">
+                <h2>Kontakt oss for bestilling</h2>
+                <p>Telefon: 69893481</p>
+                <p>Epost: post@villamatogmer.no</p>
+            </div>
+        </div>   
     </main>
 
 
