--- a/catering-christmas.html
+++ b/catering-christmas.html
@@ -48,8 +48,8 @@
             </ul>
         </nav>
 
-        <div class="image-carousel">
-
+        <div class="carousel-container">
+            <img src="images/foodchristmas.jpg" class="single-picure" alt="">
         </div>
 
         <div class="catering-spesific">
@@ -147,6 +147,5 @@
     </footer> 
     
     <script src="js/hamburgermenu.js"></script>
-
 </body>
 </html>
