--- a/catering-lystbord.html
+++ b/catering-lystbord.html
@@ -48,8 +48,25 @@
             </ul>
         </nav>
 
-        <div class="image-carousel">
-
+        <div class="carousel-container">
+            <div>
+                <div class="prev nav-btn"><i class="fas fa-chevron-left"></i></div>
+                <div class="next nav-btn"><i class="fas fa-chevron-right"></i></div>
+            </div>
+            <div class="carousel">
+                <div class="carousel-image main">
+                    <img src="images/foodlystbord.jpg" alt="" />
+                </div>
+                <div class="carousel-image">
+                    <img src="images/foodlystbord1.jpg" alt="" />
+                </div>
+                <div class="carousel-image">
+                    <img src="images/foodlystbord2.jpg" alt="" />
+                </div>   
+                <div class="carousel-image">
+                    <img src="images/foodlystbord3.jpg" alt="" />
+                </div>    
+            </div>
         </div>
 
         <div class="catering-spesific">
@@ -145,6 +162,6 @@
     </footer> 
     
     <script src="js/hamburgermenu.js"></script>
-
+    <script src="js/pictureCarousel.js"></script>
 </body>
 </html>
