--- a/catering-varm.html
+++ b/catering-varm.html
@@ -48,8 +48,8 @@
             </ul>
         </nav>
 
-        <div class="image-carousel">
-
+        <div class="carousel-container">
+            <img src="images/foodvarm.jpg" class="single-picure" alt="">
         </div>
 
         <div class="catering-spesific">
@@ -113,6 +113,6 @@
     </footer> 
     
     <script src="js/hamburgermenu.js"></script>
-
+    <script src="js/pictureCarousel.js"></script>
 </body>
 </html>
