--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         <div class="iconContainer">
             <a href="https://www.facebook.com/Villa-Mat-og-Mer-202483923145207" target="_blank"><i class="fab fa-facebook-f"></i></a>
             <a href="https://www.instagram.com/villamatogmer/" target="_blank"><i class="fab fa-instagram"></i></a>
-            <i class="far fa-envelope"></i>
-            <i class="fas fa-phone-alt"></i>
+            <a href="mailto:post@villamatogmer.no"><i class="far fa-envelope"></i></a>
+            <a href="tel://+4769893481"></a><i class="fas fa-phone-alt"></i>
         </div>
     </header>
     <main>
