--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <a href="https://www.facebook.com/Villa-Mat-og-Mer-202483923145207" target="_blank"><i class="fab fa-facebook-f"></i></a>
             <a href="https://www.instagram.com/villamatogmer/" target="_blank"><i class="fab fa-instagram"></i></a>
             <a href="mailto:post@villamatogmer.no"><i class="far fa-envelope"></i></a>
-            <a href="tel:69893481"></a><i class="fas fa-phone-alt"></i>
+            <a href="tel:69893481"><i class="fas fa-phone-alt"></i></a>
         </div>
     </header>
     <main>
