--- a/catering-lystbord.html
+++ b/catering-lystbord.html
@@ -33,8 +33,8 @@
         <div class="iconContainer">
             <a href="https://www.facebook.com/Villa-Mat-og-Mer-202483923145207" target="_blank"><i class="fab fa-facebook-f"></i></a>
             <a href="https://www.instagram.com/villamatogmer/" target="_blank"><i class="fab fa-instagram"></i></a>
-            <i class="far fa-envelope"></i>
-            <i class="fas fa-phone-alt"></i>
+            <a href="mailto:post@villamatogmer.no"><i class="far fa-envelope"></i></a>
+            <a href="tel:69893481"><i class="fas fa-phone-alt"></i></a>
         </div>
     </header>
 
@@ -117,10 +117,12 @@
                     <li><i class="fas fa-heart"></i>Vi kan tilby godt brød om du ønsker det</li>
                 </ul>
             </div>
-            <div class="catering-spesific-contact">
+            <div>
                 <h2>Kontakt oss for bestilling</h2>
-                <p>Telefon: 69893481</p>
-                <p>Epost: post@villamatogmer.no</p>
+                <div class="catering-spesific-contact">
+                    <a href="tel:69893481">Tlf.: 69893481</i></a>
+                    <a href="mailto:post@villamatogmer.no">Epost: post@villamatogmer.no</i></a>
+                </div>
             </div>
         </div>   
     </main>
