--- a/about.html
+++ b/about.html
@@ -56,17 +56,25 @@
                 <p>Vi ønsker at våre gjester skal glede seg over ett treffsted der matglede, kvalitet, service og en trivelig atmosfære står i sentrum. </p>
                 <p>Vi vil leke med den norske maten og utvikle og videreformidle matglede. Villa Mat og Mer er vårt spiseri og vår landhandel med leken atmosfære og frisk, folkelig mat.</p>
             <h2>Kontakt oss</h2>
-                <p>Telefon: 69893481</p>
-                <p>Epost: post@villamatogmer.no</p>
+                <p>Telefon: <a href="tel:69893481">69893481</a></p>
+                <p>Epost: <a href="mailto:post@villamatogmer.no">post@villamatogmer.no</a></p>
                 <p>Daglig leder: Anne-Marit R. Vammeli</p>
+            <h2>Hvor finner du oss</h2>
+                <p>Adresse: David Blidsgate 6, 1850 Mysen</p>
+
+
+                <div id="map"></div>
+
+
+
         </div> 
     </main>
     <footer>
         <div class="footer-container">
             <div>
-                <a href="contact.html"><h4><i class="fas fa-heart"></i>Kontakt oss</h4></a>
-                <p>Telefon: 69893481</p>
-                <p>Epost: post@villamatogmer.no</p>
+                <h4><i class="fas fa-heart"></i>Kontakt oss</h4>
+                <p>Telefon: <a href="tel:69893481">69893481</a></p>
+                <p>Epost: <a href="mailto:post@villamatogmer.no">post@villamatogmer.no</a></p>
                 <p>Daglig leder: Anne-Marit R. Vammeli</p>
             </div>
             <div>
@@ -97,6 +105,10 @@
     </footer> 
     
     <script src="js/hamburgermenu.js"></script>
-
+    <script src="js/googleMaps.js"></script>
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap&libraries=&v=weekly"
+      async
+    ></script>
 </body>
 </html>
