--- a/afternoontea.html
+++ b/afternoontea.html
@@ -54,7 +54,7 @@
                     <p>Etter klokken 12 finner vi gjerne frem de tre etasjes fatene som fylles med små foccacia med ulikt pålegg, ferske scones med hjemmelaget syltetøy så topper vi det hele med konfekt og småkaker. En kanne te eller kanskje litt sprudlende dråper til – en herlig avkobling fra hverdagen.</p>                   
                 <h2>Forhåndsbestilles</h2>
                     <p>Afternoon tea må forhåndsbestilles.  Kr 345,- pr person, minimum 2 personer.</p>
-                    <p>Kontakt oss på telefon: 69893481 eller epost: post@villamatogmer.no</p>
+                    <p>Kontakt oss på telefon: <a href="tel:69893481">69893481</a> eller på epost: <a href="mailto:post@villamatogmer.no">post@villamatogmer.no</a></p>
             </div>           
         </div> 
     </main>
@@ -63,9 +63,9 @@
     <footer>
         <div class="footer-container">
             <div>
-                <a href="contact.html"><h4><i class="fas fa-heart"></i>Kontakt oss</h4></a>
-                <p>Telefon: 69893481</p>
-                <p>Epost: post@villamatogmer.no</p>
+                <h4><i class="fas fa-heart"></i>Kontakt oss</h4>
+                <p>Telefon: <a href="tel:69893481">69893481</a></p>
+                <p>Epost: <a href="mailto:post@villamatogmer.no">post@villamatogmer.no</a></p>
                 <p>Daglig leder: Anne-Marit R. Vammeli</p>
             </div>
             <div>
