--- a/catering-cake.html
+++ b/catering-cake.html
@@ -111,9 +111,9 @@
     <footer>
         <div class="footer-container">
             <div>
-                <a href="contact.html"><h4><i class="fas fa-heart"></i>Kontakt oss</h4></a>
-                <p>Telefon: 69893481</p>
-                <p>Epost: post@villamatogmer.no</p>
+                <h4><i class="fas fa-heart"></i>Kontakt oss</h4>
+                <p>Telefon: <a href="tel:69893481">69893481</a></p>
+                <p>Epost: <a href="mailto:post@villamatogmer.no">post@villamatogmer.no</a></p>
                 <p>Daglig leder: Anne-Marit R. Vammeli</p>
             </div>
             <div>
