--- a/catering.html
+++ b/catering.html
@@ -107,12 +107,12 @@
 
     <footer>
         <div class="footer-container">
-            <div>
-                <a href="contact.html"><h4><i class="fas fa-heart"></i>Kontakt oss</h4></a>
-                <p>Telefon: 69893481</p>
-                <p>Epost: post@villamatogmer.no</p>
-                <p>Daglig leder: Anne-Marit R. Vammeli</p>
-            </div>
+          <div>
+            <h4><i class="fas fa-heart"></i>Kontakt oss</h4>
+            <p>Telefon: <a href="tel:69893481">69893481</a></p>
+            <p>Epost: <a href="mailto:post@villamatogmer.no">post@villamatogmer.no</a></p>
+            <p>Daglig leder: Anne-Marit R. Vammeli</p>
+        </div>
             <div>
                 <a href="about.html"><h4><i class="fas fa-heart"></i>Besøk oss</h4></a>
                 <p>Villa Mat og Mer</p>
