--- a/afternoontea.html
+++ b/afternoontea.html
@@ -95,7 +95,7 @@
         </div>
     </footer> 
     
-    <script src="js/hamburgermenu.js"></script>
+    <script src="js/hamburgerMenu.js"></script>
 
 </body>
 </html>
