--- a/catering-cake.html
+++ b/catering-cake.html
@@ -143,7 +143,7 @@
         </div>
     </footer> 
     
-    <script src="js/hamburgermenu.js"></script>
+    <script src="js/hamburgerMenu.js"></script>
     <script src="js/pictureCarousel.js"></script>
 
 </body>
