--- a/catering-christmas.html
+++ b/catering-christmas.html
@@ -148,6 +148,6 @@
         </div>
     </footer> 
     
-    <script src="js/hamburgermenu.js"></script>
+    <script src="js/hamburgerMenu.js"></script>
 </body>
 </html>
