--- a/catering.html
+++ b/catering.html
@@ -140,7 +140,7 @@
         </div>
     </footer> 
     
-    <script src="js/hamburgermenu.js"></script>
+    <script src="js/hamburgerMenu.js"></script>
 
 </body>
 </html>
