--- a/menu.html
+++ b/menu.html
@@ -49,26 +49,26 @@
         <div class="background-menu"></div>
         <div class="menu-container">
             <h1>Meny</h1>
-            <p>På Villa Mat og Mer får du servert fersk mat som vi har stått opp tidlig for å forberede. </p>
-            <p>Fra vårt spiseri ordnes det salater, blingser, foccacia og mange varianter av søte godsaker som lapper, boller og kaker. </p>
-            <p>Vi endrer menyen etter årstider og råvarer.</p>
+                <p>På Villa Mat og Mer får du servert fersk mat som vi har stått opp tidlig for å forberede. </p>
+                <p>Fra vårt spiseri ordnes det salater, blingser, foccacia og mange varianter av søte godsaker som lapper, boller og kaker. </p>
+                <p>Vi endrer menyen etter årstider og råvarer.</p>
             <h3>Villas foccacia</h3>
-            <p>Foccacia med ost og skinke (A: M, HG) kr 135,-</p>
-            <p>Foccacia med westfalerskinke fra Rakkestad, smøreost og pesto (A: M, HG) kr 135,-</p>
-            <p>Foccacia med egg, westfalerskinke og avocado (A: M, HG, E) kr 135,-</p>
-            <p>Foccacia med mozzarella, tomat og fersk pesto (A: M, HG) kr 135,-</p>
+                <p>Foccacia med ost og skinke (A: M, HG) kr 135,-</p>
+                <p>Foccacia med westfalerskinke fra Rakkestad, smøreost og pesto (A: M, HG) kr 135,-</p>
+                <p>Foccacia med egg, westfalerskinke og avocado (A: M, HG, E) kr 135,-</p>
+                <p>Foccacia med mozzarella, tomat og fersk pesto (A: M, HG) kr 135,-</p>
             <h3>En solid blings</h3>
-            <p>Matpakkeblings med egg og salami (A: E, M, HG) kr 75,-</p>
-            <p>Matpakkeblings med ost og skinke (A: M, HG) kr 75,-</p>
-            <p>Osteblings med hvit-eller blåmuggost fra Landhandelen og honningglaserte nøtter (A : HG, M,, P, MA, C, H) kr 179,-</p>
-            <p>Reker i trengsel. Egg og håndpillede Engelsviken reker (A: M, E, S, HG) kr 179,-</p>
-            <p>Kyllingblings med avocado, bacon og hvitløksmajones (A : E, HG, R) kr 179,-</p>
-            <p>Pulled pork med mango BBQ og Gangstad salatost (A : HG, M, SE, SB, SE, SO, SL) kr 179,-</p>
+                <p>Matpakkeblings med egg og salami (A: E, M, HG) kr 75,-</p>
+                <p>Matpakkeblings med ost og skinke (A: M, HG) kr 75,-</p>
+                <p>Osteblings med hvit-eller blåmuggost fra Landhandelen og honningglaserte nøtter (A : HG, M,, P, MA, C, H) kr 179,-</p>
+                <p>Reker i trengsel. Egg og håndpillede Engelsviken reker (A: M, E, S, HG) kr 179,-</p>
+                <p>Kyllingblings med avocado, bacon og hvitløksmajones (A : E, HG, R) kr 179,-</p>
+                <p>Pulled pork med mango BBQ og Gangstad salatost (A : HG, M, SE, SB, SE, SO, SL) kr 179,-</p>
             <h3>Salat med godt brød til</h3>
-            <p>Sommersalat med jordbær, sennepsmarinert kylling, salatost fra Gangstad Ysteri, ristede valnøtter og foccaciakrutonger (A: M, V , SE, SU, HG) kr 179,-</p>
-            <p>Salat med kylling marinert i Sweet Chilisaus fra Landhandelen vår, granateple, høvla Brimiost og foccaciakrutonger (A: HG, SU, M) kr 179,-</p>
-            <p>Salat med hvit-eller blåmuggost fra Landhandelen, honningglaserte nøtter og balsamico (A: V, M, P, MA, C, H) kr 179,-</p>
-            <p>Salat med pulled pork med mango BBQ fra Landhandelen vår, Salatost fra Gangstad Ysteri, jordbær og foccaciakrutonger (A : M, HG, SE, SB, SE, SO, SL ) kr 179,-</p>
+                <p>Sommersalat med jordbær, sennepsmarinert kylling, salatost fra Gangstad Ysteri, ristede valnøtter og foccaciakrutonger (A: M, V , SE, SU, HG) kr 179,-</p>
+                <p>Salat med kylling marinert i Sweet Chilisaus fra Landhandelen vår, granateple, høvla Brimiost og foccaciakrutonger (A: HG, SU, M) kr 179,-</p>
+                <p>Salat med hvit-eller blåmuggost fra Landhandelen, honningglaserte nøtter og balsamico (A: V, M, P, MA, C, H) kr 179,-</p>
+                <p>Salat med pulled pork med mango BBQ fra Landhandelen vår, Salatost fra Gangstad Ysteri, jordbær og foccaciakrutonger (A : M, HG, SE, SB, SE, SO, SL ) kr 179,-</p>
             <h3>Varm suppe</h3>
             <p>Villas kyllingsuppe (A: M) kr 155,-</p>
         </div>
@@ -110,7 +110,7 @@
         </div>
     </footer> 
     
-    <script src="js/hamburgermenu.js"></script>
+    <script src="js/hamburgerMenu.js"></script>
 
 </body>
 </html>
