--- a/catering-fruit.html
+++ b/catering-fruit.html
@@ -132,7 +132,7 @@
         </div>
     </footer> 
     
-    <script src="js/hamburgermenu.js"></script>
+    <script src="js/hamburgerMenu.js"></script>
     <script src="js/pictureCarousel.js"></script>
 </body>
 </html>
