--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <div class="home-cta">Catering</div>
                 </div>
             </a>
-            <a href="contact.html" class="home-small-info-content">
+            <a href="coffe.html" class="home-small-info-content">
                 <h2>Kaffe</h2>
                 <div>
                     <img src="images/home2.jpg" alt="salat med bringebær, brie, nøtter og spinat">
@@ -144,6 +144,6 @@
             </div>
         </div>
     </footer> 
-    <script src="js/hamburgermenu.js"></script>
+    <script src="js/hamburgerMenu.js"></script>
 </body>
 </html>
