--- a/catering-christmas.html
+++ b/catering-christmas.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Villa Mat og Mer | Landhandel</title>
+    <title>Villa Mat og Mer | Julesmaker</title>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="bestill julemat, julelunsj eller kolekoltbord, catering eller spis i kafeen, forhåndsbestill">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
