--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Villa Mat og Mer | Cafe i Mysen</title>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="hyggelig kafe, god atmosfære, hjemmelaget mat, hjemmelagde kaker, kaffe og catering">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -87,7 +87,7 @@
                     <img src="images/home5.jpg" alt="salat med bringebær, brie, nøtter og spinat">
                 </div>   
                 <div class="home-cta-container">
-                    <div class="home-cta">Catering</div>
+                    <div class="home-cta">Afternoon tea</div>
                 </div>
             </a>
             <a href="coffe.html" class="home-small-info-content">
