--- a/afternoontea.html
+++ b/afternoontea.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Villa Mat og Mer | Cafe i Mysen</title>
+    <title>Villa Mat og Mer | Afternoon tea</title>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="bestill afternoon tea, et tre etages fat med foccacia, scones, konfekt og småkaker">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
