--- a/catering-fruit.html
+++ b/catering-fruit.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Villa Mat og Mer | Landhandel</title>
+    <title>Villa Mat og Mer | Frukt, ost, skinker og salater</title>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="bestill fruktfat, skinker, salater og ost, catering">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
