--- a/menu.html
+++ b/menu.html
@@ -3,7 +3,7 @@
 <head>
     <title>Villa Mat og Mer | Meny</title>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="se vår meny tilpasset sesongen, ny meny vår, sommer, høst og vinter">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
