--- a/shop.html
+++ b/shop.html
@@ -3,7 +3,7 @@
 <head>
     <title>Villa Mat og Mer | Landhandel</title>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="i landhandelen kan du kjøpe lokale oster, skinker, konfekt og interiør, gavepakker">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
